# ChangeLog for mail-filter/qmail-scanner
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/qmail-scanner/ChangeLog,v 1.25 2005/05/25 15:30:03 mcummings Exp $

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  qmail-scanner-1.25-r1.ebuild:
  dev-perl/Time-HiRes => perl-core/Time-HiRes migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  qmail-scanner-1.25.ebuild:
  dev-perl/Time-HiRes => perl-core/Time-HiRes migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  qmail-scanner-1.24.ebuild:
  dev-perl/Time-HiRes => perl-core/Time-HiRes migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  qmail-scanner-1.23-r3.ebuild:
  dev-perl/Time-HiRes => perl-core/Time-HiRes migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  qmail-scanner-1.23-r2.ebuild:
  dev-perl/Time-HiRes => perl-core/Time-HiRes migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  qmail-scanner-1.16-r2.ebuild:
  dev-perl/Time-HiRes => perl-core/Time-HiRes migration

  24 May 2005; Michael Cummings <mcummings@gentoo.org>
  qmail-scanner-1.16-r2.ebuild, qmail-scanner-1.23-r2.ebuild,
  qmail-scanner-1.23-r3.ebuild, qmail-scanner-1.24.ebuild,
  qmail-scanner-1.25-r1.ebuild, qmail-scanner-1.25.ebuild:
  dev-perl/DB_File => perl-core/DB_File

  23 May 2005; <anarchy@gentoo.org> qmail-scanner-1.25-r1.ebuild:
  restricting userpriv usersandbox bug #93447

*qmail-scanner-1.25-r1 (10 Apr 2005)

  10 Apr 2005; Lim Swee Tat <st_lim@gentoo.org>
  +qmail-scanner-1.25-r1.ebuild:
  Version bump for the qmail scanner spam assassin patch

  05 Apr 2005; Lim Swee Tat <st_lim@gentoo.org> qmail-scanner-1.25.ebuild:
  Fixed bug #85365

  22 Mar 2005; <blubb@gentoo.org> qmail-scanner-1.25.ebuild:
  added ~amd64

*qmail-scanner-1.25 (18 Feb 2005)

  18 Feb 2005; Lim Swee Tat <st_lim@gentoo.org> +qmail-scanner-1.25.ebuild:
  Version bumpped

*qmail-scanner-1.24 (21 Nov 2004)
