@@ -1,27 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 e2ab6c7557f76932300466782c462523 ChangeLog 6568
-MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
+MD5 88d1eaad615ece7c3b44a2463a41c794 qmail-scanner-1.23-r3.ebuild 4937
+MD5 973f03bc899ab4e4697b61394d2b4fae qmail-scanner-1.24.ebuild 4934
+MD5 8e452ae34d56edf1c95f845180609257 qmail-scanner-1.25-r1.ebuild 5008
+MD5 874e8edcd5b3ea24aaf900091b4682ff qmail-scanner-1.23-r2.ebuild 4939
 MD5 e38875beaf16ef06fcb01c61a720990d qmail-scanner-1.16-r2.ebuild 2319
-MD5 79c3f99434672e6f1edf384cac1dae28 qmail-scanner-1.23-r2.ebuild 4929
-MD5 94292f873bcde84c6d21cd6ff8475d73 qmail-scanner-1.23-r3.ebuild 4927
-MD5 15982f6939721adfdcff8f9d0f66d138 qmail-scanner-1.24.ebuild 4924
-MD5 6be22b99d53415d8287c829cf933fade qmail-scanner-1.25.ebuild 4969
-MD5 8fb70a7a13b10e37d4235d7e1be17f0f qmail-scanner-1.25-r1.ebuild 4998
+MD5 0977b4c31c95ee32ad5302176fc1e511 ChangeLog 6831
+MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
+MD5 dfe13e53837618c6554e704dea5bd7de qmail-scanner-1.25.ebuild 4979
+MD5 6f6fc9e3db3985ba4ae5a6203d2d6abf files/qmailscanner.cronjob 50
+MD5 b626340aa9646bcd929b6f8ce0e4a0e2 files/digest-qmail-scanner-1.24 139
+MD5 ccef1593fec0a4c9435fe1d5dd881309 files/digest-qmail-scanner-1.25 140
+MD5 055c5ac64c689a669b8ccd6bc5f6553d files/qmailscanner.logrotate 147
+MD5 1d80eca1d4792a4073f51eb59f02960b files/qmail-scanner-queue.pl.patch 240
 MD5 21cbccfc2015bf74d509a5b329ef4b30 files/digest-qmail-scanner-1.16-r2 67
 MD5 c6351759d589862bf81247f857fb2038 files/digest-qmail-scanner-1.23-r2 139
 MD5 109da745344755ce96b85ccb255ff736 files/digest-qmail-scanner-1.23-r3 139
-MD5 b626340aa9646bcd929b6f8ce0e4a0e2 files/digest-qmail-scanner-1.24 139
-MD5 ccef1593fec0a4c9435fe1d5dd881309 files/digest-qmail-scanner-1.25 140
-MD5 1d80eca1d4792a4073f51eb59f02960b files/qmail-scanner-queue.pl.patch 240
-MD5 6f6fc9e3db3985ba4ae5a6203d2d6abf files/qmailscanner.cronjob 50
-MD5 055c5ac64c689a669b8ccd6bc5f6553d files/qmailscanner.logrotate 147
 MD5 ff83ea44513fae0bbfc5bcacbc34e394 files/digest-qmail-scanner-1.25-r1 140
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.0 (GNU/Linux)
+Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFClJoQtG5z4I8BtQoRAv9RAKCFDf/kOD421/bYmx7KbYe/arAnyQCfbDsf
-CRnsfx9C2Kz5xFqjlPEO9oM=
-=JrIB
+iD8DBQFCm183I1lqEGTUzyQRAjKaAKCG0+kaS02eCRCpJAJWskZ44I2wkwCg13Z+
+DzndHpXsyMYPTpzupsWMKhY=
+=iCJ7
 -----END PGP SIGNATURE-----
