@@ -1,6 +1,12 @@
 # ChangeLog for mail-filter/qmail-scanner
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/qmail-scanner/ChangeLog,v 1.25 2005/05/25 15:30:03 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/qmail-scanner/ChangeLog,v 1.26 2005/05/30 18:44:44 swegener Exp $
+
+  30 May 2005; Sven Wegener <swegener@gentoo.org>
+  qmail-scanner-1.23-r2.ebuild, qmail-scanner-1.23-r3.ebuild,
+  qmail-scanner-1.24.ebuild, qmail-scanner-1.25.ebuild,
+  qmail-scanner-1.25-r1.ebuild:
+  Moved from gcc.eclass to toolchain-funcs.eclass, bug #92745.
 
   25 May 2005; Michael Cummings <mcummings@gentoo.org>
   qmail-scanner-1.25-r1.ebuild:
